# stardew-valley-pygame-clone

./: main.py  pyproject.toml
data/: map.tmx
src/: level.py  main.py  overlay.py  player.py  settings.py  sprites.py  support.py  timer.py
src/level/: __init__.py  level.py  sky.py  soil.py  transition.py
