[tool.poetry]
name = "pydew-valley"
version = "0.1.0"
description = ""
authors = ["Jose Salcido <jmsalcidoaguilar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
PyTMX = "^3.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
